--- a/CSS/setting.css
+++ b/CSS/setting.css
@@ -8,8 +8,8 @@
     --gray-light: #888;
     --bg-block: #fff9f8;
     --gray-dark: #263a41;
-    --wrapper: 192rem;
-    --container: 115rem;
+    --wrapper: 125rem;
+    --container: 125rem;
   }
   *,
   *:before,
@@ -20,11 +20,11 @@
     font-size: 62.5%; /* set 1rem = 1em = 10px */
   }
   body {
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family: 'Times New Roman', Times, serif;
     font-weight: 300;
     color: var(--gray-dark);
     background-color: var(--white);
-    min-width: 50rem;
   }
   img {
     display: block;
