--- a/CSS/icon.css
+++ b/CSS/icon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?re3h04');
-  src:  url('fonts/icomoon.eot?re3h04#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?re3h04') format('truetype'),
-    url('fonts/icomoon.woff?re3h04') format('woff'),
-    url('fonts/icomoon.svg?re3h04#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?b97lx5');
+  src:  url('fonts/icomoon.eot?b97lx5#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?b97lx5') format('truetype'),
+    url('fonts/icomoon.woff?b97lx5') format('woff'),
+    url('fonts/icomoon.svg?b97lx5#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-gamepad:before {
+  content: "\e900";
+}
 .icon-home3:before {
   content: "\e902";
 }
@@ -34,6 +37,9 @@
 .icon-phone:before {
   content: "\e942";
 }
+.icon-envelop:before {
+  content: "\e945";
+}
 .icon-briefcase:before {
   content: "\e9ae";
 }
@@ -42,4 +48,13 @@
 }
 .icon-cross:before {
   content: "\ea0f";
+}
+.icon-facebook:before {
+  content: "\ea90";
+}
+.icon-instagram:before {
+  content: "\ea92";
+}
+.icon-github:before {
+  content: "\eab0";
 }
