--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,16 +1,16 @@
 html,body {
     height: 100%;
+    min-height: 41rem;
 }
 
 body {
-    background-color: rgba(3, 33, 42, 1);
+    background-color: rgb(217, 248, 249);
 }
 
 .wrapper {
     height: 100%;
     font-size: 1.4rem;
     position: relative;
-
 }
 
 .heading {
@@ -30,19 +30,29 @@ body {
 #js-aboutme,
 #js-mywork,
 #js-resume,
-#js-swing,
+#js-game,
 #js-contact {
+    display: none;
     height: 100%;
     color: white;
-    background-color: #607d8b;
+    background-color: #57c2bf;
     padding: 4rem 0;
     position: absolute;
     padding-left: 6.5rem;
+    padding-bottom: 3.5rem;
+    box-shadow: 0 4px 8px 0 rgba(89, 144, 137, 0.4),0 3px 6px 0 rgba(33, 96, 98, 0.19);
+    -webkit-animation-name: animateright;
+    -webkit-animation-duration: 0.3s;
+    animation-name: animateright;
+    animation-duration: 0.3s;
+	
 }
 
 /* Header (item1) */
 #js-header {
+    animation: none;
     z-index: 99;
+    display: initial;
     color: teal;
     padding-left: 1.5rem;
     cursor: pointer;
@@ -50,8 +60,9 @@ body {
     max-width: 6.5rem;
     user-select: none;
     white-space: nowrap;
-    transition: all 0.4s ease;
-
+    transition: all 0.3s ease;
+    box-shadow: 1px 4px 8px 5px rgba(1, 50, 73, 0.2);
+    text-shadow: 0 0 5px #FFF, 0 0 8px #FFF, 0 0 8px #FFF;
 }
 .bg-image {
     position: absolute;
@@ -62,8 +73,8 @@ body {
     background-image: url('../images/avt.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    filter: blur(2px);
-    -webkit-filter: blur(2px);
+    filter: blur(1.5px);
+    -webkit-filter: blur(1.5px);
 }
 
 
@@ -73,16 +84,22 @@ body {
     top: 0;
 }
 .menu-text {
-    padding: 0 3rem;
+    padding: 0 2rem;
     text-align: center;
     display: none;
+}
+.menu__foot {
+    background-color: rgba(0,0,0, 0.6);
+}
+.menu__foot-item {
+    display: inline-block;
 }
 
 
 #js-header i {
     font-size: 3.5rem;
 }
-#js-header i:hover {
+#js-header .menu-item:hover {
     color: turquoise;
     transition: 0.3s;
 }
@@ -90,12 +107,10 @@ body {
 /* End item 1 */
 
 #js-mywork {
-    color: #333;
-    /* background-color: #fff; */
 }
 
 #js-aboutme {
-    z-index: 2;
+    display: initial;
     /* background-color: #607d8b; */
 }
 
@@ -103,7 +118,7 @@ body {
     /* background-color: #3f51db; */
 }
 
-#js-swing {
+#js-game {
     /* background-color: #616161; */
 }
 
@@ -126,5 +141,17 @@ body {
     color: white;
 }
 .active {
-    color: tomato;
+    color: turquoise;
+    text-shadow: 0 0 5px #333, 0 0 8px #333, 0 0 8px #333;
+}
+
+/* Animate */
+@keyframes animateright {
+    from {right: -1500px; opacity: 0.2;}
+    to {right: 0; opacity: 1;}
+}
+
+@-webkit-keyframes animateright {
+    from {right: -1500px; opacity: 0.2;}
+    to {right: 0; opacity: 1;}
 }
