--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,6 @@
 html,body {
     height: 100%;
-    min-height: 41rem;
+    min-height: 31rem;
 }
 
 body {
@@ -62,7 +62,6 @@ body {
     white-space: nowrap;
     transition: all 0.3s ease;
     box-shadow: 1px 4px 8px 5px rgba(1, 50, 73, 0.2);
-    text-shadow: 0 0 5px #FFF, 0 0 8px #FFF, 0 0 8px #FFF;
 }
 .bg-image {
     position: absolute;
@@ -73,8 +72,8 @@ body {
     background-image: url('../images/avt.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    filter: blur(1.5px);
-    -webkit-filter: blur(1.5px);
+    filter: blur(2.5px);
+    -webkit-filter: blur(2.5px);
 }
 
 
@@ -82,6 +81,7 @@ body {
     transition: all 0.5 ease;
     position: absolute;
     top: 0;
+    text-shadow: 0 0 2.5px #FFF, 0 0 4px #FFF, 0 0 4px #FFF;
 }
 .menu-text {
     padding: 0 2rem;
@@ -89,10 +89,24 @@ body {
     display: none;
 }
 .menu__foot {
-    background-color: rgba(0,0,0, 0.6);
+    background-color: rgba(0,0,0, 0.7);
+    width: 25rem;
+    position: absolute;
+    left: 0;
+    bottom: 2.5rem;
+    display: flex;
+    justify-content: space-around;
+    padding: 0.5rem 2rem;
+    transition: all 0.5s;
+    opacity: 0;
 }
-.menu__foot-item {
-    display: inline-block;
+.menu-link {
+    color: white;
+    text-shadow: 0 0 5px #fff;
+}
+.menu-link:hover {
+    color: teal;
+    text-shadow: 0 0 5px #000;
 }
 
 
