--- a/CSS/main.css
+++ b/CSS/main.css
@@ -19,6 +19,10 @@ body {
     text-align: center;
 }
 
+.content {
+    padding: 1rem 0;
+}
+
 .menu-item {
     display: block;
     margin: 2.5rem 0;
@@ -81,7 +85,7 @@ body {
     transition: all 0.5 ease;
     position: absolute;
     top: 0;
-    text-shadow: 0 0 2.5px #FFF, 0 0 3px #FFF, 0 0 3px #FFF;
+    text-shadow: 0 0 1.5px #FFF, 0 0 1.5px #FFF, 0 0 1.5px #FFF;
 }
 
 #js-toggle-menu {
@@ -137,6 +141,13 @@ body {
 #js-aboutme {
     display: initial;
     /* background-color: #607d8b; */
+}
+.img-avt {
+    border-radius: 50%;
+    height: 15rem;
+    width: 15rem;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #js-resume {
