--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,6 @@
 html,body {
     height: 100%;
-    min-height: 31rem;
+    min-height: 35arem;
 }
 
 body {
@@ -91,14 +91,20 @@ body {
 #js-toggle-menu {
     transition: 0.25s;
     display: table;
+    transform: rotateZ(0deg);
+    -webkit-transform: rotateZ(0deg);
 }
 
 #btn-menu:checked + #js-toggle-menu {
     transform: rotateZ(180deg);
-    -webkit-animation-name: animateBtnMenu;
-    -webkit-animation-duration: 0.25s;
     animation-name: animateBtnMenu;
     animation-duration: 0.25s;
+    -webkit-transform: rotateZ(180deg);
+    -webkit-animation-name: animateBtnMenu;
+    -webkit-animation-duration: 0.25s;
+    -ms-transform: rotateZ(180deg);
+    -ms-animation-name: animateBtnMenu;
+    -ms-animation-duration: 0.25s;
 
 }
 
