--- a/CSS/main.css
+++ b/CSS/main.css
@@ -91,17 +91,17 @@ body {
 #js-toggle-menu {
     transition: 0.25s;
     display: table;
-    transform: rotateZ(0deg);
-    -webkit-transform: rotateZ(0deg);
 }
 
 #btn-menu:checked + #js-toggle-menu {
     transform: rotateZ(180deg);
     animation-name: animateBtnMenu;
     animation-duration: 0.25s;
+/* safari */
     -webkit-transform: rotateZ(180deg);
     -webkit-animation-name: animateBtnMenu;
     -webkit-animation-duration: 0.25s;
+
     -ms-transform: rotateZ(180deg);
     -ms-animation-name: animateBtnMenu;
     -ms-animation-duration: 0.25s;
@@ -211,16 +211,16 @@ body {
 @keyframes animateBtnMenu {
     0% {
         transform: rotateZ(0);
-    }
-    100% {
+      }
+      100% {
         transform: rotateZ(180deg);
       }
 }
 @-webkit-keyframes animateBtnMenu {
     0% {
-        transform: -webkit-rotateZ(0);
-    }
-    100% {
-        transform: -webkit-rotateZ(180deg);
-    }
+        transform: rotateZ(0);
+      }
+      100% {
+        transform: rotateZ(180deg);
+      }
 }
