--- a/CSS/main.css
+++ b/CSS/main.css
@@ -94,11 +94,11 @@ body {
     display: table;
 }
 
-#btn-menu:checked + #js-toggle-menu {
+/* #btn-menu:checked + #js-toggle-menu {
     transform: rotateZ(180deg);
     animation-name: animateBtnMenu;
     animation-duration: 0.25s;
-/* safari */
+
     -webkit-transform: rotateZ(180deg);
     -webkit-animation-name: animateBtnMenu;
     -webkit-animation-duration: 0.25s;
@@ -107,7 +107,7 @@ body {
     -ms-animation-name: animateBtnMenu;
     -ms-animation-duration: 0.25s;
 
-}
+} */
 
 .menu-text {
     padding: 0 2rem;
@@ -198,6 +198,20 @@ body {
     color: tomato;
 }
 
+.xoay {
+    transform: rotateZ(180deg);
+    animation-name: animateBtnMenu;
+    animation-duration: 0.25s;
+    /* safari */
+    -webkit-transform: rotateZ(180deg);
+    -webkit-animation-name: animateBtnMenu;
+    -webkit-animation-duration: 0.25s;
+
+    -ms-transform: rotateZ(180deg);
+    -ms-animation-name: animateBtnMenu;
+    -ms-animation-duration: 0.25s;
+}
+
 /* Animate */
 @keyframes animateright {
     from {right: -1500px; opacity: 0.2;}
@@ -219,9 +233,9 @@ body {
 }
 @-webkit-keyframes animateBtnMenu {
     0% {
-        -webkit-transform: rotateZ(0);
+        transform: rotateZ(0);
     }
     100% {
-        -webkit-transform: rotateZ(180deg);
+        transform: rotateZ(180deg);
     }
 }
