--- a/CSS/main.css
+++ b/CSS/main.css
@@ -89,28 +89,13 @@ body {
 }
 
 #js-toggle-menu {
-    transition: 0.25s;
-    -webkit-transition: 0.25s;
-    -o-transition: 0.25s;
-    -moz-transition: 0.25s;
-    -ms-transition: 0.25s;
+    transition: .2s;
+    -webkit-transition: .2s;
+    -o-transition: .2s;
+    -moz-transition: .2s;
+    -ms-transition: .2s;
     display: table;
 }
-
-/* #btn-menu:checked + #js-toggle-menu {
-    transform: rotateZ(180deg);
-    animation-name: animateBtnMenu;
-    animation-duration: 0.25s;
-
-    -webkit-transform: rotateZ(180deg);
-    -webkit-animation-name: animateBtnMenu;
-    -webkit-animation-duration: 0.25s;
-
-    -ms-transform: rotateZ(180deg);
-    -ms-animation-name: animateBtnMenu;
-    -ms-animation-duration: 0.25s;
-
-} */
 
 .menu-text {
     padding: 0 2rem;
