--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,6 @@
 html,body {
     height: 100%;
-    min-height: 32rem;
+    min-height: 28rem;
 }
 
 body {
@@ -42,7 +42,8 @@ body {
 #js-game,
 #js-contact {
     display: none;
-    min-height: 100%;
+    height: 100%;
+    overflow: auto;
     color: #5e7c77;
     background-color: #e9f0f2;
     position: absolute;
@@ -53,7 +54,6 @@ body {
     -webkit-animation-duration: 0.25s;
     animation-name: animateright;
     animation-duration: 0.25s;
-	
 }
 
 /* Header (item1) */
@@ -142,7 +142,33 @@ body {
 
 #js-mywork {
 }
+.mywork__projects img{
+    position: absolute;
+    top: 0;
+    height: 100%;
+}
+.mywork__projects .col-s-6 {
+    padding: 0.5rem 5rem;
+}
+.square {
+    position: relative;
+    padding: 2px;
+}
+.square:before{
+	content: "";
+	display: block;
+	padding-top: 100%; 	/* ratio of 1:1*/
+}
 
+.mywork__projects .title {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 1rem 0.5rem;
+    color: #fff;
+    font-size: 1.6rem;
+    background-color: rgba(0, 0, 0, 0.8);
+}
 /* About me */
 #js-aboutme {
     display: initial;
