Fix mobile view mywork

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -148,7 +148,7 @@ body {
     height: 100%;
 }
 .mywork__projects .col-s-6 {
-    padding: 0.5rem 5rem;
+    padding: 0.5rem;
 }
 .square {
     position: relative;
