--- a/CSS/main.css
+++ b/CSS/main.css
@@ -141,11 +141,17 @@ body {
 /* End item 1 */
 
 #js-mywork {
+
 }
 .mywork__projects img{
     position: absolute;
     top: 0;
+    width: 100%;
     height: 100%;
+}
+
+.mywork__projects .col-s-6:hover {
+    opacity: 0.7;
 }
 .mywork__projects .col-s-6 {
     padding: 0.5rem;
