--- a/Game/gameBrick/xepgach.css
+++ b/Game/gameBrick/xepgach.css
@@ -18,6 +18,7 @@ body, html {
 body {
   background-color: #080c14;
   font-family: 'Times New Roman', Times, serif;
+  user-select: none;
 }
 #js-boadrGame {
   height: 100vmin;
