--- a/CSS/main.css
+++ b/CSS/main.css
@@ -171,6 +171,7 @@ body {
     bottom: 0;
     width: 100%;
     padding: 1rem 0.5rem;
+    height: 30%;
     color: #fff;
     font-size: 1.6rem;
     background-color: rgba(0, 0, 0, 0.8);
@@ -208,7 +209,72 @@ body {
 
 #js-resume {
     /* background-color: #3f51db; */
+    line-height: 3rem;
+    display:block
 }
+
+.resume__time-line {
+    line-height: 2rem;
+}
+
+.resume__item {
+    display: flex;
+}
+.resume__item--small {
+    font-size: 1rem;
+    color: cadetblue;
+    line-height: 1.5rem;
+}
+.resume__item--small > div:first-child,
+.resume__item--small > div:last-child {
+    padding: 0.5rem 0;
+}
+.resume__item-colum {
+    position: relative;
+    width: 1rem;
+}
+.resume__item-colum--small .square {
+    top: 0.7rem;
+}
+.resume__circle {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    background-color: #e9f0f2;
+    position: absolute;
+    left: 0;
+    top: 2rem;
+    -moz-box-shadow:    inset 0 0 0 0.2rem teal
+    -webkit-box-shadow: inset 0 0 0 0.2rem teal;
+    box-shadow:         inset 0 0 0 0.2rem teal;
+}
+.resume__line {
+    height: 100%;
+    width: .2rem;
+    margin: 0 .4rem;
+    background-color: teal;
+}
+.resume__item-left,
+.resume__item-right {
+    margin: 0 1.5rem;
+    padding: 1.5rem 0;
+}
+.resume__item-left {
+    text-align: right;
+    width: 25%;
+    font-size: 0.7em;
+
+}
+
+.resume__item-right {
+    border-bottom: 1px lightgray dashed;
+    width: 100%;
+}
+
+
+
+
+/* End resume */
 
 #js-game {
     /* background-color: #616161; */
