--- a/CSS/main.css
+++ b/CSS/main.css
@@ -35,6 +35,33 @@ body {
     color: turquoise;
 }
 
+.loader {
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+.loader--hidden {
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
+}
+@keyframes fadeOut {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+.loader > img {
+    width: 10rem;
+}
+
 #js-header,
 #js-aboutme,
 #js-mywork,
