--- a/CSS/icon.css
+++ b/CSS/icon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?b97lx5');
-  src:  url('fonts/icomoon.eot?b97lx5#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?b97lx5') format('truetype'),
-    url('fonts/icomoon.woff?b97lx5') format('woff'),
-    url('fonts/icomoon.svg?b97lx5#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?wb3dzh');
+  src:  url('fonts/icomoon.eot?wb3dzh#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?wb3dzh') format('truetype'),
+    url('fonts/icomoon.woff?wb3dzh') format('woff'),
+    url('fonts/icomoon.svg?wb3dzh#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -39,6 +39,12 @@
 }
 .icon-envelop:before {
   content: "\e945";
+}
+.icon-location2:before {
+  content: "\e948";
+}
+.icon-clock:before {
+  content: "\e94e";
 }
 .icon-briefcase:before {
   content: "\e9ae";
